--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           docker tag rorImage cesarinag/ror-image:8.4.22
 
     - name: Snyk Container Scanning
-      run: snyk container test --org=${{ secrets.SNYK_ORG }} --sarif-file-output=snyk-container.sarif cesarinag/ror-image:8.4.22
+      run: snyk container test --org=${{ secrets.SNYK_ORG }} --file=Dockerfile --sarif-file-output=snyk-container.sarif cesarinag/ror-image:8.4.22
       continue-on-error: true
     - name: Upload results to GitHub Container Scanning
       uses: github/codeql-action/upload-sarif@v1
