--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         npm install snyk-to-html -g
         mkdir downloads
-        cp -v /home/runner/work/ror-example/ror-example/*.html /home/runner/work/ror-example/ror-example/downloads
+        cp -v "/home/runner/work/java-goof/java-goof/*.html" "/home/runner/work/java-goof/java-goof/downloads"
 
     - name: Snyk Open Source Scanning
       run: snyk test --org=${{ secrets.SNYK_ORG }} --all-projects --json | snyk-to-html -o result.html
