--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         npm install snyk-to-html -g
         mkdir downloads
-        cp -v "/home/runner/work/java-goof/java-goof/"*.html "/home/runner/work/java-goof/java-goof/downloads"
+        #cp -v /home/runner/work/java-goof/java-goof/*.html /home/runner/work/java-goof/java-goof/downloads
 
     - name: Snyk Open Source Scanning
       run: snyk test --org=${{ secrets.SNYK_ORG }} --all-projects --json | snyk-to-html -o result.html
@@ -59,7 +59,7 @@ jobs:
       run: |
           docker login
           docker build -t ror-image . 
-          docker tag rorImage cesarinag/ror-image:8.4.22
+          docker tag ror-image cesarinag/ror-image:8.4.22
 
     - name: Snyk Container Scanning
       run: snyk container test --org=${{ secrets.SNYK_ORG }} --file=Dockerfile --json | snyk-to-html -o result.html cesarinag/ror-image:8.4.22
